--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-.App {
+:root{
+  --background-color: #E0E1DD;
+  --primary-color: #0D1B2A;
+  --secondary-color: #778DA9;
+  --primary-text-color: #EEEEEE;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
