--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --background-color: #E0E1DD;
   --primary-color: #0D1B2A;
   --secondary-color: #778DA9;
-  --primary-text-color: #EEEEEE;
+  --white-color: #EEEEEE;
 }
 
 /* .App {
