--- a/src/component/Loader/Loader.module.css
+++ b/src/component/Loader/Loader.module.css
@@ -8,15 +8,44 @@
 }
 
 .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-  }
+  border: 16px solid var(--white-color); 
+  border-top: 16px solid var(--primary-color);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+.title{
+  font-weight: 800;
+  font-size: xx-large;
+}
   
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@media (max-width: 1280px){
+  .loader{
+    width: 80px;
+    height: 80px;
+    border: 12px solid var(--white-color); 
+    border-top: 12px solid var(--primary-color);
   }
+  .title{
+    font-size: x-large;
+  }
+}
+
+@media (max-width: 720px){
+  .loader{
+    width: 50px;
+    height: 50px;
+    border: 8px solid var(--white-color); 
+    border-top: 8px solid var(--primary-color);
+  }
+  .title{
+    font-size: larger;
+  }
+}
