--- a/src/component/Layout/Layout.module.css
+++ b/src/component/Layout/Layout.module.css
@@ -3,7 +3,7 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-color: var(--background-color)
+    background-color: var(--background-color);
 }
 
 .mainLayout{
